<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.android.vehicletracking.activity.LoginPageActivity">

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" />

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/videoView"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_weight="0.3"
        android:orientation="vertical">

        <com.android.vehicletracking.widgets.InputWidget
            android:id="@+id/activity_login_user_name_input_layout_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorText="@string/activity_login_error_text_string"
            app:hintText="@string/activity_login_username_hint_string" />

        <com.android.vehicletracking.widgets.InputWidget
            android:id="@+id/activity_login_pass_word_input_layout_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorText="@string/error_msg_password_incorrect"
            app:hintText="@string/activity_login_password_hint_string" />


    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/videoView"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.1"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/activity_register_button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#EF604F"
            android:layout_weight="0.5"
            android:layout_margin="5dp"
            android:text="@string/activity_register_button_text"
            android:textColor="#FAE2D9"
            android:textSize="14sp"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/activity_login_button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:background="#EF604F"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_margin="5dp"
            android:text="@string/activity_login_button_text"
            android:textColor="#FAE2D9"
            android:textSize="14sp"
            android:textStyle="bold" />


    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v7.widget.LinearLayoutCompat>
